--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="pt-br">
     <head>
+        <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RocketCoffe</title>
@@ -10,7 +11,7 @@
     <body>
 
         <header>
-            <h1>RocketCoffe</h1>
+            <h1>Rocket<span>Coffe</span></h1>
             <p>Aberto todos os dias. 8h-21h</p>
         </header>
 
@@ -34,6 +35,37 @@
                 <li>
                     <div class="details">
                         <h3>Maçã Doce</h3>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+
+                    <strong class="price">
+                        R$17.70
+                    </strong>
+                </li>
+
+            </ul>
+        </section>
+
+        <section>
+            <h2>Bebidas</h2>
+
+            <!--lista não ordenada-->
+            <ul>
+                <!--elementos da lista-->
+                <li>
+                    <div class="details">
+                        <h3>Vinho</h3>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+
+                    <strong class="price">
+                        R$37.70
+                    </strong>
+                </li>
+
+                <li>
+                    <div class="details">
+                        <h3>Água com gás</h3>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
 
